Fix more hardcoded text and date localization
- category/dropdowns/show.html.erb: Match transfer/payment, one-time labels
- transactions/_transaction.html.erb: One-time income/expense tooltip
- reports/index.html.erb: Use I18n.l for date display
- Added corresponding translations to locale files

--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -90,8 +90,8 @@
     <%# Period Display %>
     <div class="text-sm text-secondary">
       <%= t("reports.index.showing_period",
-            start: @start_date.strftime("%b %-d, %Y"),
-            end: @end_date.strftime("%b %-d, %Y")) %>
+            start: I18n.l(@start_date, format: :long),
+            end: I18n.l(@end_date, format: :long)) %>
     </div>
   </div>
 <% end %>
