Translate form select options for loans and vehicles
Loans form:
- Fixed -> Fixe
- Variable -> Variable
- Adjustable -> Ajustable

Vehicles form:
- Miles -> Miles
- Kilometers -> Kilomètres

--- a/app/views/loans/_form.html.erb
+++ b/app/views/loans/_form.html.erb
@@ -19,7 +19,7 @@
                                  min: 0,
                                  step: 0.005 %>
         <%= loan_form.select :rate_type,
-                           [["Fixed", "fixed"], ["Variable", "variable"], ["Adjustable", "adjustable"]],
+                           [[t("loans.form.rate_type_fixed"), "fixed"], [t("loans.form.rate_type_variable"), "variable"], [t("loans.form.rate_type_adjustable"), "adjustable"]],
                            { label: t("loans.form.rate_type") } %>
       </div>
 
