--- a/app/views/vehicles/_form.html.erb
+++ b/app/views/vehicles/_form.html.erb
@@ -25,7 +25,7 @@
                                     placeholder: t("vehicles.form.mileage_placeholder"),
                                     min: 0 %>
         <%= vehicle_form.select :mileage_unit,
-                              [["Miles", "mi"], ["Kilometers", "km"]],
+                              [[t("vehicles.form.mileage_unit_miles"), "mi"], [t("vehicles.form.mileage_unit_kilometers"), "km"]],
                               { label: t("vehicles.form.mileage_unit") } %>
       </div>
     <% end %>
