--- a/app/views/lunchflow_items/_subtype_select.html.erb
+++ b/app/views/lunchflow_items/_subtype_select.html.erb
@@ -15,7 +15,7 @@
       <% end %>
     <% end %>
     <%= select_tag "account_subtypes[#{lunchflow_account.id}]",
-                  options_for_select([["Select #{account_type == 'Depository' ? 'subtype' : 'type'}", ""]] + subtype_config[:options], selected_value),
+                  options_for_select([[account_type == 'Depository' ? t("lunchflow_items.subtype_select.select_subtype") : t("lunchflow_items.subtype_select.select_type"), ""]] + subtype_config[:options], selected_value),
                   { class: "appearance-none bg-container border border-primary rounded-md px-3 py-2 text-sm leading-6 text-primary focus:border-primary focus:ring-1 focus:ring-primary focus:outline-none w-full" } %>
   <% else %>
     <p class="text-sm text-secondary"><%= subtype_config[:message] %></p>
