--- a/app/views/trades/_header.html.erb
+++ b/app/views/trades/_header.html.erb
@@ -18,7 +18,7 @@
       </h3>
 
       <% if entry.linked? %>
-        <span title="Linked with Plaid">
+        <span title="<%= t(".linked_with_plaid") %>">
           <%= icon("refresh-ccw", size: "sm") %>
         </span>
       <% end %>
