Translate avatar preview alt text and version label

--- a/app/views/settings/_user_avatar_field.html.erb
+++ b/app/views/settings/_user_avatar_field.html.erb
@@ -12,7 +12,7 @@
     <div class="relative flex justify-center items-center bg-surface-inset size-26 md:size-24 rounded-full border-primary border border-dashed overflow-hidden">
       <%# The image preview once user has uploaded a new file  %>
       <div data-profile-image-preview-target="previewImage" class="h-full w-full flex justify-center items-center hidden">
-        <img src="" alt="Preview" class="w-full h-full rounded-full object-cover">
+        <img src="" alt="<%= t(".preview_alt") %>" class="w-full h-full rounded-full object-cover">
       </div>
 
       <%# The placeholder image for empty avatar field  %>
