--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -107,7 +107,7 @@
     </section>
 
     <%# Collapsible & Reorderable Sections %>
-    <div data-controller="reports-sortable" data-action="dragover->reports-sortable#dragOver drop->reports-sortable#drop" role="list" aria-label="Reports sections">
+    <div data-controller="reports-sortable" data-action="dragover->reports-sortable#dragOver drop->reports-sortable#drop" role="list" aria-label="<%= t("reports.index.sections_label") %>">
       <% @reports_sections.each do |section| %>
         <% next unless section[:visible] %>
         <section
@@ -121,7 +121,7 @@
           tabindex="0"
           role="listitem"
           aria-grabbed="false"
-          aria-label="<%= t(section[:title]) %> section. Press Enter or Space to grab for reordering, then use arrow keys to move."
+          aria-label="<%= t(section[:title]) %> <%= t("reports.index.section_instructions") %>"
           data-action="
             dragstart->reports-sortable#dragStart
             dragend->reports-sortable#dragEnd
