Translate footer, lunchflow page title, and guides page title
- Footer: copyright text, privacy policy, terms of service
- Lunchflow setup_accounts: page title
- Settings guides: page title

--- a/app/views/lunchflow_items/setup_accounts.html.erb
+++ b/app/views/lunchflow_items/setup_accounts.html.erb
@@ -1,4 +1,4 @@
-<% content_for :title, "Set Up Lunch Flow Accounts" %>
+<% content_for :title, t(".page_title") %>
 
 <%= render DS::Dialog.new do |dialog| %>
   <% dialog.with_header(title: t(".title")) do %>
