--- a/app/views/layouts/shared/_footer.html.erb
+++ b/app/views/layouts/shared/_footer.html.erb
@@ -1,10 +1,10 @@
 <footer class="p-6">
   <div class="space-y-2 text-center text-xs text-secondary">
-    <p>&copy; <%= Date.current.year %>, <%= brand_name %> <%= product_name %> (community fork of Maybe Finance)</p>
+    <p>&copy; <%= Date.current.year %>, <%= brand_name %> <%= product_name %> <%= t("layouts.shared.footer.copyright") %></p>
     <div class="flex justify-center items-center gap-2">
-      <%= link_to "Privacy Policy", privacy_path, class: "text-secondary", target: "_blank" %>
+      <%= link_to t("layouts.shared.footer.privacy_policy"), privacy_path, class: "text-secondary", target: "_blank" %>
       <span>&bull;</span>
-      <%= link_to "Terms of Service", terms_path, class: "text-secondary", target: "_blank" %>
+      <%= link_to t("layouts.shared.footer.terms_of_service"), terms_path, class: "text-secondary", target: "_blank" %>
     </div>
   </div>
 </footer>
