--- a/app/views/transfers/_account_links.html.erb
+++ b/app/views/transfers/_account_links.html.erb
@@ -6,7 +6,7 @@
   <% if first_account %>
     <%= link_to first_account.name, account_path(first_account, tab: "activity"), class: "hover:underline", data: { turbo_frame: "_top" } %>
   <% else %>
-    <span class="text-warning text-xs italic" title="Transfer ID: <%= transfer.id %>">
+    <span class="text-warning text-xs italic" title="<%= t("transfers.account_links.transfer_id", id: transfer.id) %>">
       <%= t("transfers.account_links.data_error_missing_account") %>
     </span>
   <% end %>
@@ -18,7 +18,7 @@
   <% if second_account %>
     <%= link_to second_account.name, account_path(second_account, tab: "activity"), class: "hover:underline", data: { turbo_frame: "_top" } %>
   <% else %>
-    <span class="text-warning text-xs italic" title="Transfer ID: <%= transfer.id %>">
+    <span class="text-warning text-xs italic" title="<%= t("transfers.account_links.transfer_id", id: transfer.id) %>">
       <%= t("transfers.account_links.data_error_missing_account") %>
     </span>
   <% end %>
