--- a/app/views/valuations/confirm_create.html.erb
+++ b/app/views/valuations/confirm_create.html.erb
@@ -10,7 +10,7 @@
           reconciliation_dry_run: @reconciliation_dry_run,
           account: @account,
           entry: @entry,
-          action_verb: "set",
+          action_verb: t("valuations.action_verbs.set"),
           is_update: false %>
 
       <%= form.submit t(".confirm") %>
