--- a/app/views/valuations/confirm_update.html.erb
+++ b/app/views/valuations/confirm_update.html.erb
@@ -9,7 +9,7 @@
           reconciliation_dry_run: @reconciliation_dry_run,
           account: @account,
           entry: @entry,
-          action_verb: "update",
+          action_verb: t("valuations.action_verbs.update"),
           is_update: true %>
 
       <%= form.submit t(".update") %>
