--- a/app/views/accounts/_account.html.erb
+++ b/app/views/accounts/_account.html.erb
@@ -1,7 +1,7 @@
 <%# locals: (account:, return_to: nil) %>
 
 <%= turbo_frame_tag dom_id(account) do %>
-  <div class="p-4 flex items-center justify-between gap-3 group/account">
+  <div class="p-4 flex items-center justify-between gap-3 group/account hover:bg-surface-hover">
     <div class="flex items-center gap-3">
       <%= render "accounts/logo", account: account, size: "md" %>
 
