--- a/app/views/shared/notifications/_alert.html.erb
+++ b/app/views/shared/notifications/_alert.html.erb
@@ -1,7 +1,12 @@
 <%# locals: (message:) %>
 
-<%= tag.div class: "flex gap-3 rounded-lg bg-container p-4 group w-full md:max-w-80 shadow-border-lg transition-all duration-300 ease-out opacity-0 translate-y-[-8px] mb-3",
-            data: { controller: "element-removal" } do %>
+<%= tag.div class: "relative flex gap-3 rounded-lg bg-container p-4 group w-full md:max-w-80 shadow-border-lg mb-3 transition-enter-exit animate-fade-up-initial",
+            data: {
+              controller: "element-removal",
+              element_removal_initial_class: "animate-fade-up-initial",
+              element_removal_visible_class: "animate-fade-up-visible",
+              element_removal_exit_class: "animate-fade-up-exit"
+            } do %>
   <div class="h-5 w-5 shrink-0 p-px text-primary">
     <div class="flex h-full items-center justify-center rounded-full bg-destructive">
       <%= icon "x", size: "xs", color: "white" %>
