--- a/app/views/shared/notifications/_cta.html.erb
+++ b/app/views/shared/notifications/_cta.html.erb
@@ -1,18 +1,23 @@
 <%# locals: (message:, description:) %>
 
-<%= tag.div id: "cta", class: "relative flex gap-3 rounded-lg bg-container p-4 group w-full md:max-w-80 shadow-border-lg transition-all duration-300 ease-out opacity-0 translate-y-[-8px] mb-3",
-            data: { controller: "element-removal" } do %>
-  <div class="h-5 w-5 shrink-0 p-px text-primary">
-    <div class="flex h-full items-center justify-center rounded-full bg-success fg-inverse">
-      <%= icon "check", size: "xs", color: "current" %>
+<%= tag.div id: "cta", class: "relative flex gap-3 rounded-lg bg-container p-4 group w-full md:max-w-80 shadow-border-lg mb-3 transition-enter-exit animate-fade-up-initial",
+            data: {
+              controller: "element-removal",
+              element_removal_initial_class: "animate-fade-up-initial",
+              element_removal_visible_class: "animate-fade-up-visible",
+              element_removal_exit_class: "animate-fade-up-exit"
+            } do %>
+    <div class="h-5 w-5 shrink-0 p-px text-primary">
+      <div class="flex h-full items-center justify-center rounded-full bg-success fg-inverse">
+        <%= icon "check", size: "xs", color: "current" %>
+      </div>
     </div>
-  </div>
 
-  <div class="space-y-4">
-    <div class="space-y-1">
-      <%= tag.p message, class: "text-primary text-sm font-medium" %>
-      <%= tag.p description, class: "text-secondary text-sm" %>
-    </div>
+    <div class="space-y-4">
+      <div class="space-y-1">
+        <%= tag.p message, class: "text-primary text-sm font-medium" %>
+        <%= tag.p description, class: "text-secondary text-sm" %>
+      </div>
 
     <%= yield %>
   </div>
