--- a/app/views/layouts/auth.html.erb
+++ b/app/views/layouts/auth.html.erb
@@ -1,6 +1,6 @@
 <%= render "layouts/shared/htmldoc" do %>
   <div class="flex flex-col h-full">
-    <div class="flex flex-col h-full px-6 py-12 bg-surface">
+    <div class="flex flex-col h-full px-6 pb-12 pt-[calc(env(safe-area-inset-top)+0.35rem)] bg-surface">
       <div class="grow flex flex-col justify-center">
         <div class="sm:mx-auto sm:w-full sm:max-w-md">
           <div class="flex justify-center mt-2 md:mb-6">
