--- a/app/views/layouts/imports.html.erb
+++ b/app/views/layouts/imports.html.erb
@@ -1,6 +1,6 @@
 <%= render "layouts/shared/htmldoc" do %>
   <div class="flex flex-col h-full bg-container">
-    <header class="flex items-center justify-between p-8">
+    <header class="flex items-center justify-between px-8 pb-8 pt-[calc(env(safe-area-inset-top)+0.35rem)] touch-none">
       <%= render DS::Link.new(
         variant: "icon",
         icon: "arrow-left",
@@ -18,7 +18,7 @@
       ) %>
     </header>
 
-    <main class="grow px-8 md:pt-12 pb-32 overflow-y-auto">
+    <main class="grow px-8 md:pt-12 pb-[calc(8rem+env(safe-area-inset-bottom))] overflow-y-auto">
       <div class="flex md:hidden justify-center w-full">
         <%= yield :mobile_import_progress %>
       </div>
