--- a/app/views/layouts/settings.html.erb
+++ b/app/views/layouts/settings.html.erb
@@ -1,12 +1,12 @@
 <%= render "layouts/shared/htmldoc" do %>
-  <div class="flex flex-col md:flex-row h-full bg-surface">
-    <div class="p-4 w-full md:w-96 shrink-0 md:h-full md:overflow-y-auto">
+  <div class="flex flex-col md:flex-row h-full bg-surface pt-[calc(env(safe-area-inset-top)+0.35rem)]">
+    <div class="p-4 w-full md:w-96 shrink-0 md:h-full md:overflow-y-auto touch-none">
       <%= render "settings/settings_nav" %>
     </div>
 
     <main class="grow flex h-full">
       <div class="relative max-w-4xl mx-auto flex flex-col w-full h-full">
-        <div class="grow space-y-4 overflow-y-auto px-3 md:px-10 pt-2 md:py-4 pb-20 overscroll-contain [-webkit-overflow-scrolling:touch]">
+        <div class="grow space-y-4 overflow-y-auto px-3 md:px-10 pt-2 md:py-4 pb-[calc(5rem+env(safe-area-inset-bottom))] overscroll-contain [-webkit-overflow-scrolling:touch]">
           <% if content_for?(:breadcrumbs) %>
             <%= yield :breadcrumbs %>
           <% else %>
