--- a/app/views/layouts/wizard.html.erb
+++ b/app/views/layouts/wizard.html.erb
@@ -1,6 +1,6 @@
 <%= render "layouts/shared/htmldoc" do %>
   <div class="bg-surface flex flex-col h-full">
-    <header class="flex items-center justify-between p-8">
+    <header class="flex items-center justify-between px-8 pb-8 pt-[calc(env(safe-area-inset-top)+0.35rem)] touch-none">
       <% if content_for?(:prev_nav) %>
         <%= yield :prev_nav %>
       <% else %>
@@ -26,7 +26,7 @@
       <% end %>
     </header>
 
-    <main class="grow px-8 pt-12 pb-32 overflow-y-auto">
+    <main class="grow px-8 pt-12 pb-[calc(8rem+env(safe-area-inset-bottom))] overflow-y-auto">
       <%= yield %>
     </main>
 
