--- a/app/views/layouts/settings.html.erb
+++ b/app/views/layouts/settings.html.erb
@@ -1,6 +1,6 @@
 <%= render "layouts/shared/htmldoc" do %>
   <div class="flex flex-col md:flex-row h-full bg-surface pt-[calc(env(safe-area-inset-top)+0.35rem)]">
-    <div class="p-4 w-full md:w-96 shrink-0 md:h-full md:overflow-y-auto touch-none">
+    <div class="p-4 w-full md:w-96 shrink-0 md:h-full md:overflow-y-auto">
       <%= render "settings/settings_nav" %>
     </div>
 
